definitions/grammar/grammar.bnf
{
    tokens=[
      IDENTIFIER="regexp:[a-zA-Z_][a-zA-Z0-9_]*"
      COMMENTS="regexp://.*"
    ]
}

program ::= declaration* <<eof>>

declaration ::= varDeclaration
varDeclaration ::= 'var' IDENTIFIER ('=' expression)? ';'


statement ::= expressionStatement

expressionStatement ::= expression ';'

expression ::= assignment

assignment ::= IDENTIFIER '=' assignment
